An edit to the viewport meta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>
       Johannes Wehner // Tagging, Autotagging, Open Source Development
     </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="Business website for Johannes Wehner, tagging and open source web consultant. I do Drupal!" />
     <meta name="keywords" content="Tagger, Drupal, PHP, MySQL, jQUery, Open Source, Web, Semantic Web, Web development" />
