--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               I use tools like
             </h3>
             <p>
-              <a href="http://drupal.org/">Drupal</a>, <a href="http://php.net">PHP</a>, <a href="http://jquery.com/">jQuery</a>, <a href="http://httpd.apache.org/">Apache</a>, <a href="http://mysql.com">MySQL</a>, <a href="http://varnish-cache.org/">Varnish</a>, <a href="http://www.sphinxsearch.com/">Sphinx</a>, <a href="http://memcached.org/">Memcached</a> and <a href="http://en.wikipedia.org/wiki/Linux">Linux.</a>
+              <a href="http://drupal.org/">Drupal</a>, <a href="http://php.net">PHP</a>, <a href="http://jquery.com/">jQuery</a>, <a href="http://httpd.apache.org/">Apache</a>, <a href="http://nginx.net/">NGINX</a>, <a href="http://mysql.com">MySQL</a>, <a href="http://varnish-cache.org/">Varnish</a>, <a href="http://www.sphinxsearch.com/">Sphinx</a>, <a href="http://memcached.org/">Memcached</a> and <a href="http://en.wikipedia.org/wiki/Linux">Linux.</a>
             </p>
             <br />
             <p>...and the tagging project I founded: <a href="http://tagger.dk">Tagger</a></p>
@@ -50,13 +50,15 @@
           </div>
           <div id="contact" class="single-col fourth last">
             <h3>
-              Contact
+              More
             </h3>
             <p>
-              <a href="http://40c.dk">40C.dk</a><br />
               <a rel="foaf:mbox" href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a><br />
+              <a href="http://40c.dk">40C</a><br />
+              <a href="http://tagger.dk">Tagger</a><br />
+              <a href="http://www.information.dk/databloggen">Datablog</a><br />
               <a href="http://dk.linkedin.com/in/johanneswehner">LinkedIn</a><br />
-              <a href="http://twitter.com/johsw">twitter.com/johsw</a><br />
+              <a href="http://twitter.com/johsw">Twitter</a><br />
             </p>
           </div>
         </div>
