--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               I do
             </h3>
             <p>
-              Content metadata consultancy,<br />Tagger implementation,<br /> Web Application Development,<br />, Datajournalistic visualizations
+              Content metadata consultancy,<br />Tagger implementation,<br />Web Application Development,<br />Datajournalistic visualizations
             </p>
           </div>
           <div id="contact" class="single-col fourth last">
