Styling og text.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div about="#me" typeof="foaf:Person" id="main">
       <div id="intro-wrapper">
         <h1>Hi. I'm Johannes Wehner</h1>
-        <h2>I do open source web application development</h2>
+        <h2>I build open source web applications</h2>
       </div>
       <div id="contents-wrapper">
         <div id="contents">
@@ -34,7 +34,7 @@
               I've helped
             </h3>
             <p>
-              <a href="http://www.information.dk/">Dagbladet Information</a>, <a href="http://tv2.dk">Tv2</a>, <a href="http://videnskab.dk">Videnskab.dk</a>, <a href="http://borsen.dk">Børsen</a>, <a href="http://www.al-akhbar.com">Al-Akhbar</a>, <a href="http://www.ms.dk">Mellemfolkeligt Samvirke</a>, <a href="http://aoh.dk">aoh.dk</a>, <a href="http://uovo.dk">Uovo</a>, <a href="http://kommunikationsfirmaet.com/">Kommunikationsfirmaet</a>
+              <a href="http://www.information.dk/">Dagbladet Information</a>, <a href="http://tv2.dk">Tv2</a>, <a href="http://videnskab.dk">Videnskab.dk</a>, <a href="http://borsen.dk">Børsen</a>, <a href="http://www.al-akhbar.com">Al-Akhbar</a>, <a href="http://www.ms.dk">Mellemfolkeligt Samvirke</a>, <a href="http://aoh.dk">aoh.dk</a>
             </p>
           </div>
           <div id="tasks" class="single-col third">
@@ -42,7 +42,7 @@
               I do
             </h3>
             <p>
-              Content metadata consultancy,<br />Tagger implementation,<br />Web Application Development,<br />Datajournalistic visualizations
+              Content metadata consultancy,<br />Tagger implementation,<br />Web Application Development,<br />Data visualizations
             </p>
           </div>
           <div id="contact" class="single-col fourth last">
@@ -65,7 +65,7 @@
     <script src="jquery.fittext.js"></script>
     <script type="text/javascript">
       $("h1").fitText(1.05);
-      $("h2").fitText(1.95);
+      $("h2").fitText(1.45);
     </script>
     <script type="text/javascript">
 //<![CDATA[
