--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="jquery-1.7.2.min.js"></script>
     <script src="jquery.fittext.js"></script>
     <script type="text/javascript">
       $("h1").fitText(1.05);
