Text and background changes.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" version="XHTML+RDFa 1.0" xml:lang="en" xmlns:foaf="http://xmlns.com/foaf/0.1/">
   <head>
     <title>
-      Johannes Wehner // Tagging, Autotagging, Open Source Development
+      Johannes Wehner // Open Source Web App Development
     </title>
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -24,10 +24,8 @@
               I use tools like
             </h3>
             <p>
-              <a href="http://drupal.org/">Drupal</a>, <a href="http://php.net">PHP</a>, <a href="http://jquery.com/">jQuery</a>, <a href="http://httpd.apache.org/">Apache</a>, <a href="http://nginx.net/">NGINX</a>, <a href="http://mysql.com">MySQL</a>, <a href="http://varnish-cache.org/">Varnish</a>, <a href="http://www.sphinxsearch.com/">Sphinx</a>, <a href="http://memcached.org/">Memcached</a> and <a href="http://en.wikipedia.org/wiki/Linux">Linux.</a>
+              <a href="http://drupal.org/">Drupal</a>, <a href="http://php.net">PHP</a>, <a href="http://jquery.com/">jQuery</a>, <a href="http://sass-lang.com">SASS</a>, <a href="http://httpd.apache.org/">Apache</a>, <a href="http://nginx.net/">NGINX</a>, <a href="http://mysql.com">MySQL</a>, <a href="http://varnish-cache.org/">Varnish</a>, <a href="http://www.sphinxsearch.com/">Sphinx</a>, <a href="http://memcached.org/">Memcached</a>, <a href="http://nodejs.org/">Node.js</a>, <a href="http://www.elasticsearch.org/">Elasticsearch</a>, <a href="http://www.appcelerator.com/titanium/">Titanium</a>, <a href="http://git-scm.com/">Git</a> and <a href="http://en.wikipedia.org/wiki/Linux">Linux.</a>
             </p>
-            <br />
-            <p>...and the tagging project I founded: <a href="http://tagger.dk">Tagger</a></p>
           </div>
           <div id="experience" class="single-col second">
             <h3>
@@ -42,7 +40,7 @@
               I do
             </h3>
             <p>
-              Content metadata consultancy,<br />Tagger implementation,<br />Web Application Development,<br />Data visualizations
+              Web Application Development - both frontend and backend, Drupal-integrations, REST APIs, Responsive Websites, Data visualizations, HTML5/CSS3 and lots of other stuff...<br /> 
             </p>
           </div>
           <div id="contact" class="single-col fourth last">
@@ -51,11 +49,10 @@
             </h3>
             <p>
               <a rel="foaf:mbox" href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a><br />
-              <a href="http://40c.dk">40C</a><br />
-              <a href="http://tagger.dk">Tagger</a><br />
               <a href="http://www.information.dk/databloggen">Datablog</a><br />
               <a href="http://dk.linkedin.com/in/johanneswehner">LinkedIn</a><br />
-              <a href="http://twitter.com/johsw">Twitter</a><br />
+              <a href="http://twitter.com/johsw">Twitter</a><br /><br />
+              <a href="http://cvr.dk/Site/Forms/PublicService/DisplayCompany.aspx?cvrnr=32749534">CVR: 32749534</a>
             </p>
           </div>
         </div>
