Added some icons.

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
               More
             </h3>
             <p>
-              <a rel="foaf:mbox" href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a><br />
-              <a href="http://www.information.dk/databloggen">Datablog</a><br />
-              <a href="http://dk.linkedin.com/in/johanneswehner">LinkedIn</a><br />
-              <a href="http://twitter.com/johsw">Twitter</a><br /><br />
-              <a href="http://cvr.dk/Site/Forms/PublicService/DisplayCompany.aspx?cvrnr=32749534">CVR: 32749534</a>
+              <a class="icon-mail" rel="foaf:mbox" href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a><br />
+              <a class="icon-linkedin" href="http://dk.linkedin.com/in/johanneswehner">LinkedIn</a><br />
+              <a class="icon-twitter" href="http://twitter.com/johsw">Twitter</a><br />
+              <a class="icon-phone" href="tel:+4526775030">+45 26 77 50 30</a><br /><br />
+              <a class="icon-book" href="http://cvr.dk/Site/Forms/PublicService/DisplayCompany.aspx?cvrnr=32749534">CVR: 32749534</a>
             </p>
           </div>
         </div>
