Added new cvr + link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a class="icon-linkedin" href="http://dk.linkedin.com/in/johanneswehner">LinkedIn</a><br />
               <a class="icon-twitter" href="http://twitter.com/johsw">Twitter</a><br />
               <a class="icon-phone" href="tel:+4526775030">+45 26 77 50 30</a><br /><br />
-              <a class="icon-book" href="http://cvr.dk/Site/Forms/PublicService/DisplayCompany.aspx?cvrnr=32749534">CVR: 32749534</a>
+              <a class="icon-book" href="http://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=36446641">CVR: 36446641</a>
             </p>
           </div>
         </div>
