--- a/app/index.html
+++ b/app/index.html
@@ -27,43 +27,34 @@
     <div about="#me" typeof="foaf:Person" id="main">
       <div id="intro-wrapper">
         <h1>Johannes Wehner</h1>
-        <h2>I build open source web applications</h2>
+        <h2>Web application developer</h2>
+        <div class="links">
+          <a class="link-mail icon-mail" rel="foaf:mbox" href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a>
+          <a class="link-phone icon-phone" href="tel:+4526775030">+45 26 77 50 30</a> 
+          <a class="link-linkedin icon-linkedin" href="http://dk.linkedin.com/in/johanneswehner">LinkedIn</a>
+          <a class="link-twitter icon-twitter" href="http://twitter.com/johsw">Twitter</a>
+          <a class="link-cvr icon-book" href="http://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=36446641">CVR: 36446641</a>
+        </div>
       </div>
-      <div id="contents">
-       <!--- <div id="tasks" class="single-col third">
-          <h3>
-            I do
-          </h3>
-          <p>
-            Web Application Development - both frontend and backend, Drupal-integrations, REST APIs, Responsive Websites, Data visualizations, HTML5/CSS3 and lots of other stuff... -  
-          </p>
+      <div id="contents-wrapper">
+        <div class="contents-box-wrapper">
+          <div class="contents-box">
+            <p><b>Velkommen.</b> Jeg hedder Johannes Wehner og jeg er selvstændig webudvikler med 15 års erfaring. På denne side kan du se lidt om mine projekter, og hvordan jeg arbejder.</p>
+            <p>Der kan være undtagelser, men det er oftest unødigt langsommeligt og dyrt at lave alt selv fra grunden. Derfor benytter jeg en del forskellige open source <b>projekter, frameworks og libraries.</b></p>
+            <p>Jeg laver både frontend og backend, og jeg har mest erfaring med SASS, Bourbon/Neat, jQuery, Angular.js og Drupal. Men jeg har også rodet med meget andet.</p>
+          </div>
         </div>
-        <div id="tools" class="single-col">
-          <h3>
-            I use tools like
-          </h3>
-          <p>
-            <a href="http://drupal.org/">Drupal</a>, <a href="http://php.net">PHP</a>, <a href="http://jquery.com/">jQuery</a>, <a href="https://angularjs.org">Angular JS</a>, <a href="http://sass-lang.com">SASS</a>, <a href="http://bourbon.io">Bourbon</a>, <a href="http://nodejs.org/">Node.js</a>, <a href="http://git-scm.com/">Git</a> and <a href="http://www.ubuntu.com">Ubuntu.</a>
-          </p>
+        <div class="contents-box">
+            <p>De fleste af mine <b>projekter er i mediebranchen</b>. Jeg har bl.a. arbejdet for Dagbladet Information, Berlingske, Tv2, Børsen og Videnskab.dk</p>
         </div>
-        <div id="experience" class="single-col">
-          <h3>
-            I've helped
-          </h3>
-          <p>
-            <a href="http://www.information.dk/">Dagbladet Information</a>, <a href="http://tv2.dk">Tv2</a>, <a href="http://videnskab.dk">Videnskab.dk</a>, <a href="http://borsen.dk">Børsen</a>, <a href="http://www.al-akhbar.com">Al-Akhbar</a>, <a href="http://www.ms.dk">Mellemfolkeligt Samvirke</a>, <a href="http://aoh.dk">aoh.dk</a>
-          </p>
-        </div> -->
-
-
-          <!--- ><h3>
-            More
-          </h3> -->
-            <a class="icon-mail" rel="foaf:mbox" href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a> 
-            <a class="icon-linkedin" href="http://dk.linkedin.com/in/johanneswehner">LinkedIn</a>
-            <a class="icon-twitter" href="http://twitter.com/johsw">Twitter</a>
-            <a class="icon-phone" href="tel:+4526775030">+45 26 77 50 30</a>
-            <a class="icon-book" href="http://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=36446641">CVR: 36446641</a>
+        <div class="contents-box-wrapper">
+          <div class="contents-box">
+            <p>Jeg kan bedst lide projekter, hvor jeg kan tænke med - altså være med til at <b>produktudvikle og prototype</b>. Gerne i samarbejde med en UX'er og en grafiker. Det giver det bedste resultat.</p>
+            <p>Kontakt mig, hvis du synes, det lyder spændende!</p>
+            <a class="button button-phone" href="tel:+4526775030">Tlf: 26 77 50 30</a>
+            <a class="button button-mail" rel="foaf:mbox" href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a>
+          </div>
+        </div>
       </div>
     </div>
     <!-- build:js(.) scripts/vendor.js -->
