--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
         <h2>Web application developer</h2>
         <div class="links">
           <a class="link-mail icon-mail" rel="foaf:mbox" href="mailto:mail@johanneswehner.com">mail@johanneswehner.com</a>
-          <a class="link-phone icon-phone" href="tel:+4526775030">+45 26 77 50 30</a> 
+          <a class="link-phone icon-phone" href="tel:+4526775030">+45 26 77 50 30</a>
           <a class="link-linkedin icon-linkedin" href="http://dk.linkedin.com/in/johanneswehner">LinkedIn</a>
           <a class="link-twitter icon-twitter" href="http://twitter.com/johsw">Twitter</a>
           <a class="link-cvr icon-book" href="http://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=36446641">CVR: 36446641</a>
@@ -40,12 +40,50 @@
         <div class="contents-box-wrapper">
           <div class="contents-box">
             <p><b>Velkommen.</b> Jeg hedder Johannes Wehner og jeg er selvstændig webudvikler med 15 års erfaring. På denne side kan du se lidt om mine projekter, og hvordan jeg arbejder.</p>
-            <p>Der kan være undtagelser, men det er oftest unødigt langsommeligt og dyrt at lave alt selv fra grunden. Derfor benytter jeg en del forskellige open source <b>projekter, frameworks og libraries.</b></p>
+            <p>Der er undtagelser, men det er oftest unødigt langsommeligt og dyrt at lave alt selv fra grunden. Derfor benytter jeg en del forskellige open source <b>projekter, frameworks og libraries.</b></p>
             <p>Jeg laver både frontend og backend, og jeg har mest erfaring med SASS, Bourbon/Neat, jQuery, Angular.js og Drupal. Men jeg har også rodet med meget andet.</p>
           </div>
         </div>
         <div class="contents-box">
             <p>De fleste af mine <b>projekter er i mediebranchen</b>. Jeg har bl.a. arbejdet for Dagbladet Information, Berlingske, Tv2, Børsen og Videnskab.dk</p>
+            <div class="card-wrapper">
+              <div class="card">
+                <!-- <div class="card-image"><img src="../images/information.png" /></div> -->
+                <div class="card-header"><h5><a href="http://www.information.dk">Information.dk</a></h5></div>
+                <div class="card-copy">Information.dk på Drupal5, Drupal6 og Drupal7. Både frontend og backend. Diverse integrationer til eksterne systemer.</div>
+
+              </div>
+              <div class="card">
+                <!-- <div class="card-image"><img src="../images/berlingske.png" /></div> -->
+                <div class="card-header"><h5><a href="http://www.berlingskemedia.dk">Berlingske</a></h5></div>
+                <div class="card-copy">Frontend, prototyping og node.js</div>
+
+              </div>
+              <div class="card">
+                <!-- <div class="card-image"><img src="../images/tv2.png" /></div> -->
+                <div class="card-header"><h5><a href="http://beep.tv2.dk">Tv2</a></h5></div>
+                <div class="card-copy">Pilot-projekt på beep.tv2.dk inden Tv2's valg af Drupal.</div>
+
+              </div>
+              <div class="card">
+                <!-- <div class="card-image"><img src="../images/videnskab.png" /></div> -->
+                <div class="card-header"><h5><a href="http://beep.tv2.dk">Videnskab.dk</a></h5></div>
+                <div class="card-copy">Relanceret videnskab.dk på Drupal6</div>
+
+              </div>
+              <div class="card">
+                <!-- <div class="card-image"><img src="../images/videnskab.png" /></div> -->
+                <div class="card-header"><h5><a href="http://kk.dk">Købehavns Kommune</a></h5></div>
+                <div class="card-copy">Konsulent på krav til leverandør til kk.dk</div>
+
+              </div>
+              <div class="card">
+                <!-- <div class="card-image"><img src="../images/videnskab.png" /></div> -->
+                <div class="card-header"><h5><a href="http://borsen.dk">Børsen</a></h5></div>
+                <div class="card-copy">Konsulent på kategorisering og tagging af indhold</div>
+
+              </div>
+            </div>
         </div>
         <div class="contents-box-wrapper">
           <div class="contents-box">
