Retain background on 3rd section.

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
       </div>
       <div id="contents-wrapper">
         <div class="contents-box-wrapper">
-          <div class="contents-box">
+          <div class="contents-box" id="welcome">
             <p><b>Velkommen.</b> Jeg hedder Johannes Wehner og jeg er selvstændig webudvikler med 15 års erfaring. På denne side kan du se lidt om mine projekter, og hvordan jeg arbejder.</p>
             <p>Der er undtagelser, men det er oftest unødigt langsommeligt og dyrt at lave alt selv fra grunden. Derfor benytter jeg en del forskellige open source <b>projekter, frameworks og libraries.</b></p>
             <p>Jeg laver både frontend og backend, og jeg har mest erfaring med SASS, Bourbon/Neat, jQuery, Angular.js og Drupal. Men jeg har også rodet med meget andet.</p>
