More card styling.

--- a/app/index.html
+++ b/app/index.html
@@ -44,25 +44,33 @@
             <p>Jeg laver både frontend og backend, og jeg har mest erfaring med SASS, Bourbon/Neat, jQuery, Angular.js og Drupal. Men jeg har også rodet med meget andet.</p>
           </div>
         </div>
-        <div class="contents-box">
+        <div class="contents-box" id="cases">
             <p>De fleste af mine <b>projekter er i mediebranchen</b>. Jeg har bl.a. arbejdet for Dagbladet Information, Berlingske, Tv2, Børsen og Videnskab.dk</p>
+            <h4 class="cases">Cases</h4>
             <div class="card-wrapper">
+
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/information.png" /></div> -->
-                <div class="card-header"><h5><a href="http://www.information.dk">Information.dk</a></h5></div>
+                <div class="card-header"><h5><a href="http://www.information.dk">Information.dk - Platform</a></h5></div>
                 <div class="card-copy">Information.dk på Drupal5, Drupal6 og Drupal7. Både frontend og backend. Diverse integrationer til eksterne systemer.</div>
 
               </div>
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/berlingske.png" /></div> -->
-                <div class="card-header"><h5><a href="http://www.berlingskemedia.dk">Berlingske</a></h5></div>
-                <div class="card-copy">Frontend, prototyping og node.js</div>
+                <div class="card-header"><h5><a href="http://www.berlingskemedia.dk">Berlingske Media</a></h5></div>
+                <div class="card-copy">Readktionel prototyping, frontend og node.js</div>
 
               </div>
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/tv2.png" /></div> -->
                 <div class="card-header"><h5><a href="http://beep.tv2.dk">Tv2</a></h5></div>
                 <div class="card-copy">Pilot-projekt på beep.tv2.dk inden Tv2's valg af Drupal.</div>
+
+              </div>
+              <div class="card">
+                <!-- <div class="card-image"><img src="../images/tv2.png" /></div> -->
+                <div class="card-header"><h5><a href="http://www.information.dk/datablog">Information.dk - Datablog</a></h5></div>
+                <div class="card-copy">Datajournalistiske projekter i forbindelse med Cablegate, "Vi overvåger overvågerne" og flere.</div>
 
               </div>
               <div class="card">
@@ -74,7 +82,13 @@
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/videnskab.png" /></div> -->
                 <div class="card-header"><h5><a href="http://kk.dk">Købehavns Kommune</a></h5></div>
-                <div class="card-copy">Konsulent på krav til leverandør til kk.dk</div>
+                <div class="card-copy">Konsulent på krav til Drupal-leverandør til kk.dk</div>
+
+              </div>
+              <div class="card">
+                <!-- <div class="card-image"><img src="../images/tv2.png" /></div> -->
+                <div class="card-header"><h5><a href="http://www.information.dk/datablog">Information.dk - Selvbetjening</a></h5></div>
+                <div class="card-copy">Opbygning af salg og selvbetjenings-site for abonnenter. Integration til abonnementssystem.</div>
 
               </div>
               <div class="card">
