--- a/app/index.html
+++ b/app/index.html
@@ -58,19 +58,19 @@
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/berlingske.png" /></div> -->
                 <div class="card-header"><h5><a href="http://www.berlingskemedia.dk">Berlingske Media</a></h5></div>
-                <div class="card-copy">Readktionel prototyping, frontend og node.js</div>
+                <div class="card-copy">Redaktionel prototyping, frontend og node.js på flere forskellige igangværende projekter</div>
 
               </div>
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/tv2.png" /></div> -->
                 <div class="card-header"><h5><a href="http://beep.tv2.dk">Tv2</a></h5></div>
-                <div class="card-copy">Pilot-projekt på beep.tv2.dk inden Tv2's valg af Drupal.</div>
+                <div class="card-copy">Pilot-projekt på beep.tv2.dk inden Tv2's valg af Drupal - inkl. uddannelse af deres hold.</div>
 
               </div>
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/tv2.png" /></div> -->
                 <div class="card-header"><h5><a href="http://www.information.dk/datablog">Information.dk - Datablog</a></h5></div>
-                <div class="card-copy">Datajournalistiske projekter i forbindelse med Cablegate, "Vi overvåger overvågerne" og flere.</div>
+                <div class="card-copy">Datajournalistiske projekter i forbindelse med Cablegate, "Vi overvåger overvågerne" og flere. Medarrangør af datajournalistisk pris og hackacthon.</div>
 
               </div>
               <div class="card">
@@ -82,7 +82,7 @@
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/videnskab.png" /></div> -->
                 <div class="card-header"><h5><a href="http://kk.dk">Købehavns Kommune</a></h5></div>
-                <div class="card-copy">Konsulent på krav til Drupal-leverandør til kk.dk</div>
+                <div class="card-copy">Faglig konsulent på krav til Drupal-leverandør til kk.dk</div>
 
               </div>
               <div class="card">
@@ -94,7 +94,7 @@
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/videnskab.png" /></div> -->
                 <div class="card-header"><h5><a href="http://borsen.dk">Børsen</a></h5></div>
-                <div class="card-copy">Konsulent på kategorisering og tagging af indhold</div>
+                <div class="card-copy">Konsulent på kategorisering, autotagging og tagging af indhold</div>
 
               </div>
             </div>
