--- a/app/index.html
+++ b/app/index.html
@@ -70,13 +70,13 @@
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/tv2.png" /></div> -->
                 <div class="card-header"><h5><a href="http://www.information.dk/datablog">Information.dk - Datablog</a></h5></div>
-                <div class="card-copy">Datajournalistiske projekter i forbindelse med Cablegate, "Vi overvåger overvågerne" og flere. Medarrangør af datajournalistisk pris og hackacthon.</div>
+                <div class="card-copy">Datajournalistiske projekter i forbindelse med Warlogs, "Vi overvåger overvågerne" og flere. Medarrangør af datajournalistisk pris og hackathon.</div>
 
               </div>
               <div class="card">
                 <!-- <div class="card-image"><img src="../images/videnskab.png" /></div> -->
                 <div class="card-header"><h5><a href="http://beep.tv2.dk">Videnskab.dk</a></h5></div>
-                <div class="card-copy">Relanceret videnskab.dk på Drupal6</div>
+                <div class="card-copy">Migreret og bygget videnskab.dk på Drupal6</div>
 
               </div>
               <div class="card">
