--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
-    <meta name="description" content="Business website for Johannes Wehner, open source web consultant. I do Drupal!" />
-    <meta name="keywords" content="Drupal, PHP, MySQL, angular, jQuery, Open Source, frontend, Web development" />
+    <meta name="description" content="Business website for Johannes Wehner, Senior Freelance." />
+    <meta name="keywords" content="Angular.js, Angular2, jQuery, Open Source, frontend, Web development,Drupal, PHP, MySQL, node.js" />
     <link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Sanchez:400italic,400' rel='stylesheet' type='text/css'>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
