--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <meta name="description" content="Business website for Johannes Wehner, Senior Freelance Developer" />
     <meta name="keywords" content="Freelance, Angular.js, Angular2, jQuery, Open Source, frontend, Web development,Drupal, PHP, MySQL, node.js" />
     <link href='//fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
