--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,14 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-    <meta name="description" content="Business website for Johannes Wehner, Senior Freelance Developer" />
+    <meta name="description" content="Johannes Wehner, Senior Freelance Developer" />
     <meta name="keywords" content="Freelance, Angular.js, Angular2, jQuery, Open Source, frontend, Web development,Drupal, PHP, MySQL, node.js" />
-    <link href='//fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Sanchez:400italic,400' rel='stylesheet' type='text/css'>
+    <meta property="og:title" content="Johannes Wehner // Freelance Developer" />
+    <meta property="og:image" content="/images/face.jpg" />
+    <meta property="og:description" content="Description that will show in the preview" />
+    <meta property="og:url" content="https://johanneswehner.com" />
+    <link href="//fonts.googleapis.com/css?family=Questrial" rel="stylesheet" type="text/css" />
+    <link href="//fonts.googleapis.com/css?family=Sanchez:400italic,400" rel="stylesheet" type="text/css" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
