--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Freelance, Angular.js, Angular2, jQuery, Open Source, frontend, Web development,Drupal, PHP, MySQL, node.js" />
     <meta property="og:title" content="Johannes Wehner // Freelance Developer" />
     <meta property="og:image" content="https://johanneswehner.com/images/face.jpg" />
-    <meta property="og:description" content="I do webdevelopment - both conceptually and technically." />
+    <meta property="og:description" content="I do freelance webdevelopment - Get in touch!" />
     <meta property="og:url" content="https://johanneswehner.com" />
     <link href="//fonts.googleapis.com/css?family=Questrial" rel="stylesheet" type="text/css" />
     <link href="//fonts.googleapis.com/css?family=Sanchez:400italic,400" rel="stylesheet" type="text/css" />
