--- a/app/index.html
+++ b/app/index.html
@@ -8,11 +8,11 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-    <meta name="description" content="Johannes Wehner, Senior Freelance Developer" />
-    <meta name="keywords" content="Freelance, Angular.js, Angular2, jQuery, Open Source, frontend, Web development,Drupal, PHP, MySQL, node.js" />
-    <meta property="og:title" content="Johannes Wehner // Freelance Developer" />
+    <meta name="description" content="Johannes Wehner, Senior Developer" />
+    <meta name="keywords" content="Angular.js, Angular2, jQuery, Open Source, frontend, Web development,Drupal, PHP, MySQL, node.js" />
+    <meta property="og:title" content="Johannes Wehner // Senior Developer" />
     <meta property="og:image" content="https://johanneswehner.com/images/face.jpg" />
-    <meta property="og:description" content="I do freelance webdevelopment - Get in touch!" />
+    <meta property="og:description" content="I do webdevelopment - Get in touch!" />
     <meta property="og:url" content="https://johanneswehner.com" />
     <link href="//fonts.googleapis.com/css?family=Questrial" rel="stylesheet" type="text/css" />
     <link href="//fonts.googleapis.com/css?family=Sanchez:400italic,400" rel="stylesheet" type="text/css" />
@@ -42,14 +42,26 @@
       <div id="contents-wrapper">
         <div class="contents-box-wrapper">
           <div class="contents-box" id="welcome">
-            <p><b>Velkommen.</b> Jeg hedder Johannes Wehner og jeg er selvstændig webudvikler med 15 års erfaring. På denne side kan du se lidt om mine projekter, og hvordan jeg arbejder.</p>
-            <p>Jeg laver både frontend og backend, og jeg har mest erfaring med Angular.js, SCSS, jQuery, Node.js og Drupal. Men jeg har også rodet med meget andet.</p>
+            <p><b>Velkommen.</b> Jeg hedder Johannes Wehner og jeg er webudvikler med mere end 15 års erfaring. På denne side kan du se lidt om mine projekter, og hvordan jeg arbejder.</p>
+            <p>Jeg laver både frontend og backend, og jeg har mest erfaring med Javascript, Angular.js, CSS, Node.js, Wordpress og Drupal. Men jeg har også rodet med meget andet.</p>
           </div>
         </div>
         <div class="contents-box" id="cases">
-            <p>De fleste af mine <b>projekter er i mediebranchen</b>. Jeg har bl.a. arbejdet for Dagbladet Information, Berlingske, Tv2, Børsen og Videnskab.dk</p>
+            <p>De fleste af mine <b>projekter er i mediebranchen</b>. Jeg har bl.a. arbejdet for DR, Dagbladet Information, Berlingske, Tv2, Børsen og Videnskab.dk</p>
             <h4 class="cases">Cases</h4>
             <div class="card-wrapper">
+
+
+              <div class="card">
+                <div class="card-header"><h5><a href="http://dr.dk">DR</a></h5></div>
+                <div class="card-copy">Redaktionel Udvikler på DR.dk. Konceptudvikling og implementering af interaktive readktionelle elementer.</div>
+              </div>
+
+
+              <div class="card">
+                <div class="card-header"><h5><a href="http://nordea.dk">Nordea</a></h5></div>
+                <div class="card-copy">Ekstern konsulent. Angular.js i et internationalt scrum-team. Udvikling af internt værktøj.</div>
+              </div>
 
               <div class="card">
                 <div class="card-header"><h5><a href="https://foljeton.dk">Føljeton</a></h5></div>
@@ -70,7 +82,7 @@
               </div>
               <div class="card">
                 <div class="card-header"><h5><a href="http://www.berlingskemedia.dk">Berlingske Media</a></h5></div>
-                <div class="card-copy">Redaktionel prototyping, frontend og Node.js på flere forskellige igangværende projekter</div>
+                <div class="card-copy">Redaktionel prototyping, frontend og Node.js for bl.a Business.dk</div>
 
               </div>
               <div class="card">
@@ -94,7 +106,7 @@
 
               </div>
               <div class="card">
-                <div class="card-header"><h5><a href="http://www.information.dk/datablog">Information.dk - Selvbetjening</a></h5></div>
+                <div class="card-header"><h5><a href="http://www.information.dk">Information.dk - Selvbetjening</a></h5></div>
                 <div class="card-copy">Opbygning af salg og selvbetjenings-site for abonnenter. Integration til abonnementssystem.</div>
 
               </div>
