--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 
               <div class="card">
                 <div class="card-header"><h5><a href="http://dr.dk">DR</a></h5></div>
-                <div class="card-copy">Redaktionel Udvikler på DR.dk. Konceptudvikling og implementering af interaktive readktionelle elementer.</div>
+                <div class="card-copy">Redaktionel Udvikler på DR.dk. Konceptudvikling og implementering af interaktive redaktionelle elementer.</div>
               </div>
 
 
