--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               Men jeg har også rodet med meget andet.
             </p>
             <p>
-              Men jeg går faktisk mest op i koncepter og formidling. Derfor er
+              Det tekniske er vigtigt, men jeg går ligeså meget op i koncepter og formidling. Derfor er
               de fleste af mine projekter er i mediebranchen. Jeg har bl.a.
               arbejdet for DR, Dagbladet Information, Berlingske, Tv2, Børsen og
               Videnskab.dk
